ajout de la section visualition simple dans le blog (presque terminé)

--- a/blogpost-template-main/_posts/2024-09-18-ift6758-milestone-1.md
+++ b/blogpost-template-main/_posts/2024-09-18-ift6758-milestone-1.md
@@ -35,7 +35,7 @@ class NHLData:
 
 Le constructeur initialise deux dictionnaires — `playoffs` et `regular_season` — qui sont utilisés pour stocker les données pour chaque catégorie respective. Ces dictionnaires contiendront ensuite les données de plusieurs saisons, permettant une récupération et une manipulation faciles des informations récupérées.
 
-### a. Les méthodes `fetch_regular_season` et `fetch_playoffs`
+### Les méthodes `fetch_regular_season` et `fetch_playoffs`
 
 La méthode `fetch_regular_season` récupère les données de tous les matchs d'une saison régulière spécifiée. Elle le fait en effectuant continuellement des requêtes GET vers l'API de la LNH pour chaque match, en incrémentant le numéro de match à chaque requête réussie. Si la requête échoue, nous assumons avoir reçu la totalité des matchs de saison régulière.
 
@@ -175,7 +175,7 @@ Une fois les fichiers JSON téléchargés, on peut accéder à leur contenu via 
 
 La méthode  `__generate_playoff_id` quant à elle est une méthode utilitaire privée qui génère de nouveaux identifiants de matchs des séries éliminatoires en incrémentant le tour, l'affrontement et le numéro de match, selon les règles des séries éliminatoires de la LNH. Par exemple, lorsque tous les matchs d'un affrontement ont été récupérés, la méthode incrémente le numéro d'affrontement ou le tour, selon le cas.
 
-### b. Exemple d'utilisation de la classe
+### Exemple d'utilisation de la classe
 
 Essayons de récupérérer les données des match de la saison 2022 en utilisant notre classe.
 
@@ -351,3 +351,47 @@ Une fois toutes ces étapes terminées, la fonction retourne deux ensembles de d
 
 À travers ce processus de nettoyage, les données brutes issues de l'API NHL sont transformées en un ensemble de données riche et prêt à être exploité.
 Chaque étape, jusqu'à l'ajout de nouvelles features, permet de mieux comprendre les données que nous manipulons et d'analyser les matchs de hockey.
+
+## Question 4 : Visualisations simples
+
+### Tirs et buts selon le type de tirs
+
+Ce graphique nous montre des statistiques de la saison **2022**, notament **le nombre de tirs, le nombre de buts et la probabilité
+de marquer** selon les types de tirs:
+
+![Buts par type de tirs](/public/goals_by_shot_type.png)
+
+On remarque que le type de tirs le plus dangeureux est le **cradle** (**50%** de probabilité de but), suivit par le **bat**(**25.6%** de probabilité de but).
+Le type de tir le plus courant est le **wrist**(il a été réalisé **48198** fois durant la saison 2022).
+
+On a choisit ce graphique pour notre analyse car ses barres montrent bien de facon surperposée le nombre de tirs et
+nombres de buts. De plus, il met bien en évidence la probabilité de buts à travers la courbe verte.
+
+### Relation entre la distance et la probabilité de marquer un but
+
+Pour mettre en évidence la relation entre la distance à la quelle un tir a été éffectué et la probabilité
+de but pour les saisons de **2018 à 2020**, on a produit ce graphique:
+
+![Probabilité de buts par rapport à la distance](/public/goals_probability_by_distance.png)
+
+Ce graphique nous montre l'évolution de la probabilité de buts selon la distance. Pour cette question, on a regroupé
+les distances en intervalles/classes (plus petit que 7 pieds, entre 7 et 14.9 pieds, etc).
+**On remarque pour les trois saisons que plus la distance augmente, plus la probabilité de marquer un but diminue**.
+
+On a choisit ce graphique pour notre analyse car avec ses courbes, on peut voir de facon intuitive l'évolution de
+la variable sur l'axe y (la probabilité de marquer un buts) par rapport aux variations de la variable sur l'axe x (la distance).
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
