reload automatique des script python sans restart du kernel

--- a/mainNHL.ipynb
+++ b/mainNHL.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "04fb01d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "113c15ac4ff9edc2",
    "metadata": {},
    "outputs": [],
@@ -27,7 +38,7 @@
    "source": [
     "# Get data from 2016 to 2020\n",
     "start_year = 2016\n",
-    "end_year = 2020\n",
+    "end_year = 2022\n",
     "\n",
     "nhl_data_provider = get_data_from(start_year, end_year)"
    ]
