identification of team sides in debugging tool using periods and zoneCode

--- a/blogpost-template-main/_posts/2024-09-18-ift6758-milestone-1.md
+++ b/blogpost-template-main/_posts/2024-09-18-ift6758-milestone-1.md
@@ -35,7 +35,7 @@ class NHLData:
 
 Le constructeur initialise deux dictionnaires — `playoffs` et `regular_season` — qui sont utilisés pour stocker les données pour chaque catégorie respective. Ces dictionnaires contiendront ensuite les données de plusieurs saisons, permettant une récupération et une manipulation faciles des informations récupérées.
 
-### Les méthodes `fetch_regular_season` et `fetch_playoffs`
+### Méthodes `fetch_regular_season` et `fetch_playoffs`
 
 La méthode `fetch_regular_season` récupère les données de tous les matchs d'une saison régulière spécifiée. Elle le fait en effectuant continuellement des requêtes GET vers l'API de la LNH pour chaque match, en incrémentant le numéro de match à chaque requête réussie. Si la requête échoue, nous assumons avoir reçu la totalité des matchs de saison régulière.
 
@@ -197,7 +197,6 @@ nhl_data_provider.playoffs[2022][0]
 On obtient ceci comme résultat:
 
 ![Apercu de l'outil de débogage](/public/data-fetch-example.png)
-
 
 ## Question 2 : Outil de débogage interactif
 
