finalisation de la partie visualition simple du blog

--- a/blogpost-template-main/_posts/2024-09-18-ift6758-milestone-1.md
+++ b/blogpost-template-main/_posts/2024-09-18-ift6758-milestone-1.md
@@ -380,12 +380,25 @@ les distances en intervalles/classes (plus petit que 7 pieds, entre 7 et 14.9 pi
 On a choisit ce graphique pour notre analyse car avec ses courbes, on peut voir de facon intuitive l'évolution de
 la variable sur l'axe y (la probabilité de marquer un buts) par rapport aux variations de la variable sur l'axe x (la distance).
 
+### Pourcentage de but en fonction de la distance au filet et des types de tirs
 
+Le graphique suivant montre l'évolution du pourcentage du buts en fonction de la distance du tir au but, ce pour différents types
+de tirs lors de la saison **2020**:
 
+![Buts par type de tirs](/public/goals_probability_by_distance_and_shot_type.png)
 
+Premièrement, remarquons qu'on a observé que 7 type de tirs différents durant la saison **2020** alors que 11 type de tirs différents
+ont été observé durant la saison **2022**. 
 
+De plus, pour la plus part des type de tirs, on observe la même tendance que précédement, c'est à dire
+une diminution de la probabilité de buts quand la distance augmente. Le tir de type **wrap-around** fait exception car 
+sa probabilité de but croit à partir de 45 pieds. Ca s'explique par le fait qu'a partir de 45 pieds, il n'y a que
+3 tirs de ce type (dont un qui a été un but) qui ont été réalisés durant la saison **2020**.
 
-
+On fait également les remarques suivantes :
+- En dessous de 7 pieds et entre 30 et 44.9 pieds: c'est le tir de type **deflected** qui est le plus dangeureux
+- Entre 7 et 29.9 pieds: c'est le tir de type **slap** qui est le plus dangeureux
+- Au dessus de 45 pieds: c'est le tir de type **wrap-around** qui est le plus dangeureux
 
 
 
