Amélioration de la structure, du code, des graphiques...etc Début du blog pour la partie visualisations avancées

--- a/blogpost-template-main/_posts/2024-09-18-ift6758-milestone-1.md
+++ b/blogpost-template-main/_posts/2024-09-18-ift6758-milestone-1.md
@@ -6,7 +6,8 @@ toc: true
 
 ## Question 1 : Acquisition de données
 
-La classe `NHLData` encapsule toutes les fonctionnalités nécessaires pour récupérer et stocker les données de jeu de la LNH.  Elle a la structure suivante:
+La classe `NHLData` encapsule toutes les fonctionnalités nécessaires pour récupérer et stocker les données de jeu de la LNH.
+Elle a la structure suivante :
 
 ```python
 import json
@@ -39,7 +40,7 @@ Le constructeur initialise deux dictionnaires — `playoffs` et `regular_season`
 
 La méthode `fetch_regular_season` récupère les données de tous les matchs d'une saison régulière spécifiée. Elle le fait en effectuant continuellement des requêtes GET vers l'API de la LNH pour chaque match, en incrémentant le numéro de match à chaque requête réussie. Si la requête échoue, nous assumons avoir reçu la totalité des matchs de saison régulière.
 
-Elle est définit comme suit:
+Elle est défini comme suit :
 
 ```python
         # Path directory to save files
@@ -98,7 +99,7 @@ Elle est définit comme suit:
 
 La méthode `fetch_playoffs` fonctionne de manière similaire à `fetch_regular_season`, mais est conçue pour récupérer les données des matchs des séries éliminatoires de la LNH. Les matchs des séries éliminatoires sont structurés différemment, donc la méthode prend en compte les différents tours et affrontements.
 
-Elle est définit comme suit:
+Elle est défini comme suit :
 
 ```python
     def fetch_playoffs(self, year: str):
@@ -171,15 +172,15 @@ Elle est définit comme suit:
 ```
 
 Les deux méthodes sauvegardent les données récupérées dans des fichiers locaux au format JSON dans une structure de répertoire appropriée (`data/regular_season/<année>` ou `data/playoffs/<année>`). Cela permet d'éviter de récupérer les mêmes données à partir de l'API à chaque fois, ce qui rend le programme plus efficace et permet un accès hors ligne aux données.
-Une fois les fichiers JSON téléchargés, on peut accéder à leur contenu via les dictionnaires `playoffs` et `regular_season` qui sont populés à partir de ces fichiers.
+Une fois les fichiers JSON téléchargés, on peut accéder à leur contenu via les dictionnaires `playoffs` et `regular_season`.
 
 La méthode  `__generate_playoff_id` quant à elle est une méthode utilitaire privée qui génère de nouveaux identifiants de matchs des séries éliminatoires en incrémentant le tour, l'affrontement et le numéro de match, selon les règles des séries éliminatoires de la LNH. Par exemple, lorsque tous les matchs d'un affrontement ont été récupérés, la méthode incrémente le numéro d'affrontement ou le tour, selon le cas.
 
 ### Exemple d'utilisation de la classe
 
-Essayons de récupérérer les données des match de la saison 2022 en utilisant notre classe.
+Essayons de récupérer les données du match de la saison 2022 en utilisant notre classe.
 
-On doit d'abord télécharger les données en appellant les méthodes `fetch_regular_season` et `fetch_playoffs` comme suit:
+On doit d'abord télécharger les données en appellant les méthodes `fetch_regular_season` et `fetch_playoffs` comme suit :
 
 ```python
 nhl_data_provider = NHLData()
@@ -187,24 +188,25 @@ nhl_data_provider.fetch_regular_season(2022)
 nhl_data_provider.fetch_playoffs(2022)
 ```
 
-Ensuite, on peut accéder aux données téléchargés via les dictionnaires `regular_season` et `playoffs`. Par exemple, pour obtenir les données du premier match de la saison régulière et du premier match de playoffs pour la saison 2022, on utilise le code suivant:
+Ensuite, on peut accéder aux données téléchargées via les dictionnaires `regular_season` et `playoffs`.
+Par exemple, pour obtenir les données du premier match de la saison régulière et du premier match de playoffs pour la saison 2022, on utilise le code suivant :
 
 ```python
 nhl_data_provider.regular_season[2022][0]
 nhl_data_provider.playoffs[2022][0]
 ```
 
-On obtient ceci comme résultat:
+On obtient ceci comme résultat :
 
 ![Apercu de l'outil de débogage](/public/data-fetch-example.png)
 
 ## Question 2 : Outil de débogage interactif
 
-Ceci est un apercu de l'outil de débogage interactif:
+Ceci est un apercu de l'outil de débogage interactif :
 
 ![Apercu de l'outil de débogage](/public/debugging-tool.png)
 
-Le code pour l'implementer est le suivant:
+Le code pour implementer est le suivant :
 
   ```python
 
@@ -247,7 +249,7 @@ def plot_game(game_number, games_data):
 
 def plot_game_event(game_data, event_number):
     event_data = game_data['plays'][event_number - 1]
-    print("infos de l'evenement")
+    print("infos de l'événement")
 
     img = mpimg.imread('images/patinoire.png')
     img_height, img_width = img.shape[0], img.shape[1]
@@ -282,14 +284,14 @@ def plot_game_event(game_data, event_number):
 
     plt.show()
 
-    # on affiche les données brute de l'évenement
+    # on affiche les données brutes de l'événement
     pprint.pprint(event_data)
 
   ```
 
 Avec cet outil, on peut sélectionner une saison, le type de match (saison régulière ou séries éliminatoires)
 et obtenir les informations brutes (telles que récupérées sur site du NHL) sur les matchs correspondant aux critères. On peut
-également visualiser les données des évenements qui se sont produits durant un match.
+également visualiser les données des évènements qui se sont produits durant un match.
 
 ## Question 3 : Nettoyer les données
 
@@ -355,21 +357,22 @@ Chaque étape, jusqu'à l'ajout de nouvelles features, permet de mieux comprendr
 
 ### Tirs et buts selon le type de tirs
 
-Ce graphique nous montre des statistiques de la saison **2022**, notament **le nombre de tirs, le nombre de buts et la probabilité
-de marquer** selon les types de tirs:
+Ce graphique nous montre des statistiques de la saison **2022**, notamment **le nombre de tirs, le nombre de buts et la probabilité
+de marquer** selon les types de tirs :
 
 ![Buts par type de tirs](/public/goals_by_shot_type.png)
 
-On remarque que le type de tirs le plus dangeureux est le **cradle** (**50%** de probabilité de but), suivit par le **bat**(**25.6%** de probabilité de but).
-Le type de tir le plus courant est le **wrist**(il a été réalisé **48198** fois durant la saison 2022).
+On remarque que le type de tirs le plus dangereux est le **cradle** (**50%** de probabilité de but), suivit par le **bat**(**25.6%** de probabilité de but).
+Le type de tir le plus courant est le **wrist **(il a été réalisé **48198** fois durant la saison 2022).
 
-On a choisit ce graphique pour notre analyse car ses barres montrent bien de facon surperposée le nombre de tirs et
-nombres de buts. De plus, il met bien en évidence la probabilité de buts à travers la courbe verte.
+On a choisi ce graphique pour notre analyse, car ses barres montrent bien de facon superpose le nombre de tirs et
+le nombre de buts.
+De plus, il met bien en évidence la probabilité de buts à travers la courbe verte.
 
 ### Relation entre la distance et la probabilité de marquer un but
 
-Pour mettre en évidence la relation entre la distance à la quelle un tir a été éffectué et la probabilité
-de but pour les saisons de **2018 à 2020**, on a produit ce graphique:
+Pour mettre en évidence la relation entre la distance à laquelle un tir a été éffectué et la probabilité
+de but pour les saisons de **2018 à 2020**, on a produit ce graphique :
 
 ![Probabilité de buts par rapport à la distance](/public/goals_probability_by_distance.png)
 
@@ -377,8 +380,86 @@ Ce graphique nous montre l'évolution de la probabilité de buts selon la distan
 les distances en intervalles/classes (plus petit que 7 pieds, entre 7 et 14.9 pieds, etc).
 **On remarque pour les trois saisons que plus la distance augmente, plus la probabilité de marquer un but diminue**.
 
-On a choisit ce graphique pour notre analyse car avec ses courbes, on peut voir de facon intuitive l'évolution de
-la variable sur l'axe y (la probabilité de marquer un buts) par rapport aux variations de la variable sur l'axe x (la distance).
+On a choisi ce graphique pour notre analyse, car avec ses courbes, on peut voir de facon intuitive l'évolution de
+la variable sur l'axe y (la probabilité de marquer un but) par rapport aux variations de la variable sur l'axe x (la distance).
+
+### Pourcentage de but en fonction de la distance au filet et des types de tirs
+
+Le graphique suivant montre l'évolution du pourcentage de buts en fonction de la distance du tir au but, ce pour différents types
+de tirs lors de la saison **2020**:
+
+![Buts par type de tirs](/public/goals_probability_by_distance_and_shot_type.png)
+
+Premièrement, remarquons qu'on a observé que 7 type de tirs différents durant la saison **2020** alors que 11 type de tirs différents
+ont été observé durant la saison **2022**.
+
+De plus, pour la plupart des types de tirs, on observe la même tendance que précédemment, c'est-à-dire
+une diminution de la probabilité de buts quand la distance augmente. Le tir de type **wrap-around** fait exception, car
+sa probabilité de but croît à partir de 45 pieds. Ça s'explique par le fait qu'à partir de 45 pieds, il n'y a que
+3 tirs de ce type (dont un qui a été un but) qui ont été réalisés durant la saison **2020**.
+
+On fait également les remarques suivantes :
+- En dessous de 7 pieds et entre 30 et 44.9 pieds: c'est le tir de type **deflected** qui est le plus dangereux.
+- Entre 7 et 29.9 pieds : c'est le tir de type **slap** qui est le plus dangereux
+- Au-dessus de 45 pieds : c'est le tir de type **wrap-around** qui est le plus dangereux
+
+## Question 5 : Visualisations avancées
+
+Nous allons pouvoir explorer les données des matchs de NHL grâce à des cartes de densité interactives basées sur les données des saisons récentes.
+Ces graphiques permettent de visualiser où les équipes concentrent leurs zones de tirs, et ainsi, interpréter leur stratégie d'attaque.
+
+En observant les zones avec une plus grande densité de tirs, on peut en déduire à quels emplacements une équipe est la plus agressive.
+Cela permet de visualiser si une équipe se concentre davantage sur les tirs de près du but ou depuis des zones plus éloignées.
+
+**Vous pouvez interagir avec les graphiques ci-dessous et sélectionner une équipe :**
+
+# METTRE CARTE 2016
+
+# METTRE CARTE 2020
+
+Ces visualisations montrent comment les équipes concentrent leurs tirs dans des zones spécifiques.
+Par exemple, des équipes comme l'Avalanche du Colorado ou les Golden Knights de Vegas ont tendance à tirer davantage près du but, reflétant une stratégie plus agressive axée sur les tirs de haute probabilité.
+
+**Ce que nous pouvons interpréter de ces graphiques :**
+
+Les zones de chaleur les plus intenses dans les cartes de densité correspondent aux zones où les équipes tentent le plus de marquer.
+Les équipes qui réussissent bien dans la ligue présentent généralement une concentration de tirs dans les zones proches du but.
+Ce qui indique une gestion offensive efficace à exercer une pression constante dans des zones à haute probabilité de réussite comme vu dans les visualisations précédentes.
+
+En revanche, des équipes qui ont du mal à percer en attaque montrent souvent une distribution de tirs plus diffuse
+
+Comparaison des cartes de tirs de l'Avalanche du Colorado (2016-17 vs 2020-21) :
+
+- **Saison 2016-17** : L'Avalanche avait terminé dernier de la ligue cette saison.
+La carte de tirs montre une répartition des tirs peu concentrée, indiquant une difficulté à maintenir une pression offensive soutenue dans des zones de tir clés.
+
+- **Saison 2020-21** : L'équipe a radicalement amélioré son classement, finissant première dans la division ouest.
+La carte de tirs de cette saison montre une concentration plus marquée des tirs près du but, indiquant une meilleure efficacité offensive.
+
+
+
+Comparaison entre les Sabres de Buffalo et les Lightning de Tampa Bay (2018-2021) :
+
+# METTRE CARTE 2018
+
+# METTRE CARTE 2019
+
+- Les Lightning de Tampa Bay se distingue par une concentration importante de tirs dans des zones à haute dangerosité.
+L’équipe utilise un style offensif agressif qui favorise des tirs proches du gardien, augmentant ainsi les chances de marquer.
+
+- En revanche, les Sabres de Buffalo ont tendance à effectuer des tirs depuis la périphérie.
+Cette dépendance à des tirs moins dangereux limite leur efficacité offensive.
+
+Enfin, les cartes montrent certains aspects comme l’efficacité offensive, mais oublient des détails importants :
+
+1. La cohésion du groupe, la confiance entre les joueurs et le moral de l’équipe peuvent influencer fortement la performance sur la glace.
+Une équipe talentueuse mais avec conflits internes peut connaître des résultats décevants.
+
+2. Des blessures à des joueurs forts peuvent nuire à la régularité des performances.
+
+3. La capacité à changer de stratégies en fonction des adversaires.
+
+4. Des facteurs extérieurs comme la fatigue, les déplacements, etc.
 
 
 
