--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -6886,11 +6886,11 @@
    },
    "cell_type": "code",
    "source": [
-    "# Vérification des types et absence de NaN\n",
-    "print(\"Type de X_train:\", type(X_train))\n",
-    "print(\"Type de y_train:\", type(y_train))\n",
-    "print(\"Valeurs manquantes dans X_train:\", X_train.isnull().sum().sum())\n",
-    "print(\"Valeurs manquantes dans y_train:\", y_train.isnull().sum())"
+    "# # Vérification des types et absence de NaN\n",
+    "# print(\"Type de X_train:\", type(X_train))\n",
+    "# print(\"Type de y_train:\", type(y_train))\n",
+    "# print(\"Valeurs manquantes dans X_train:\", X_train.isnull().sum().sum())\n",
+    "# print(\"Valeurs manquantes dans y_train:\", y_train.isnull().sum())"
    ],
    "id": "664cc2a5b3000006",
    "outputs": [
